Maj du iframe google

--- a/css/style.css
+++ b/css/style.css
@@ -421,21 +421,21 @@ h3 {
 #section-heart p.sub-title {
   text-align: center;
   font-weight: bold;
-}
-@media screen and (min-width: 950px) {
-  #section-heart p.sub-title {
-    margin-top: 20px;
-    margin-bottom: 40px;
-  }
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 #section-heart #group-btn {
   width: -moz-fit-content;
   width: fit-content;
-  margin: 0 auto;
-  margin-bottom: 100px;
+  margin: 0 auto 200px;
   border: 1px solid #070606;
   border-radius: 20px;
   padding: 5px;
+}
+@media screen and (min-width: 950px) {
+  #section-heart #group-btn {
+    margin: 0 auto 130px;
+  }
 }
 #section-heart #group-btn ul {
   display: flex;
@@ -460,7 +460,7 @@ h3 {
   }
 }
 #section-heart ul.top li {
-  margin-bottom: 80px;
+  margin-bottom: 120px;
 }
 @media screen and (min-width: 950px) {
   #section-heart ul.top li {
@@ -542,9 +542,10 @@ h3 {
 }
 
 #section-soon-available {
-  width: 100%;
+  width: 90%;
   padding-top: 120px;
   padding-bottom: 120px;
+  margin: 0 auto;
 }
 #section-soon-available #h3-tag {
   width: 40%;
@@ -572,9 +573,8 @@ h3 {
   max-width: 450px;
   min-width: 450px;
   width: 33%;
-  margin: 100px auto 100px auto;
+  margin: 100px auto 40px auto;
   height: 230px;
-  margin-bottom: 40px;
   padding: 15px 5px 15px 200px;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -861,7 +861,7 @@ h3 {
   transform: translate(-50%, -50%);
 }
 #section-location #container-info-location {
-  max-width: 400px;
+  max-width: 1200px;
   height: 250px;
   margin: 0 auto;
   display: flex;
