--- a/css/style.scss
+++ b/css/style.scss
@@ -474,19 +474,22 @@ h3 {
   p.sub-title {
     text-align: center;
     font-weight: bold;
-    @media screen and (min-width: 950px) {
-      margin-top: 20px;
-      margin-bottom: 40px;
-    }
+    margin-top: 20px;
+    margin-bottom: 40px;
   }
 
   #group-btn {
     width: fit-content;
-    margin: 0 auto;
-    margin-bottom: 100px;
+    margin: 0 auto 200px;
     border: 1px solid $black;
     border-radius: 20px;
     padding: 5px;
+
+    @media screen and (min-width: 950px) {
+      margin: 0 auto 130px;
+    }
+
+
 
     ul {
       display: flex;
@@ -514,7 +517,7 @@ h3 {
     }
 
     li {
-      margin-bottom: 80px;
+      margin-bottom: 120px;
 
       @media screen and (min-width: 950px) {
         width: 33%;
@@ -612,12 +615,13 @@ h3 {
   }
 }
 
-// ---------- SECTION - SOON AVAILABLE ----------
+// ---------- SECTION - lAST ARRIVAL ----------
 
 #section-soon-available {
-  width: 100%;
+  width: 90%;
   padding-top: 120px;
   padding-bottom: 120px;
+  margin: 0 auto;
 
   #h3-tag {
     width: 40%;
@@ -646,9 +650,8 @@ h3 {
       max-width: 450px;
       min-width: 450px;
       width: 33%;
-      margin: 100px auto 100px auto;
+      margin: 100px auto 40px auto;
       height: 230px;
-      margin-bottom: 40px;
       padding: 15px 5px 15px 200px;
       border-radius: 5px;
       box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -1050,7 +1053,7 @@ h3 {
   }
 
   #container-info-location {
-    max-width: 400px;
+    max-width: 1200px;
     height: 250px;
     margin: 0 auto;
     display: flex;
