--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -35,7 +35,7 @@ main {
         padding-bottom: 100px;
 
         h1 {
-            font-size: 20px;
+            font-size: 30px;
             margin-bottom: 50px;
         }
 
@@ -83,6 +83,7 @@ main {
                             a {
                                 color: $main-blue;
                                 font-weight: normal;
+                                text-transform: capitalize;
                             }
                         }
                     }
@@ -108,10 +109,37 @@ main {
                     width: 79%;
                 }
 
+                .container-sort {
+                    width: 100%;
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: space-evenly;
+                    color: $main-blue;
+                    margin-top: 30px;
+
+                    #help-choise {
+                        width: 46%;
+                        font-size: 20px;
+                        text-align: center;
+                        margin-bottom: 20px;
+                    }
+
+                    #sort {
+                        width: 500px;
+                        min-height: 40px;
+                        font-size: 16px;
+                        text-align: center;
+                        color: $main-blue;
+                        background-color: #fff;
+                        border-radius: 10px;
+                        font-weight: bold;
+                    }
+                }
+
                 .card {
                     position: relative;
-                    max-width: 450px;
-                    min-width: 450px;
+                    max-width: 500px;
+                    min-width: 500px;
                     width: 33%;
                     margin: 100px auto 100px auto;
                     height: 230px;
@@ -138,6 +166,7 @@ main {
                     .bottom-item-card {
                         h4 {
                             margin: 5px 0;
+                            text-transform: capitalize;
                         }
 
                         .title-card {
@@ -154,6 +183,16 @@ main {
                             -webkit-box-orient: vertical;
                             -webkit-line-clamp: 3;
                         }
+
+                        a.link-page {
+                            font-size: 14px;
+                            float: right;
+                            color: $main-blue;
+                            margin-right: 10px;
+                            margin-top: 20px;
+                        }
+
+
                     }
                 }
             }
