--- a/css/style-book-detail.css
+++ b/css/style-book-detail.css
@@ -1,4 +1,202 @@
-section#detail-book {
-  padding-top: 120px;
+section#section-detail-book {
+  padding-top: 60px;
   padding-bottom: 80px;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left {
+  width: 100%;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left {
+    width: 60%;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left div.book-new {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-bottom: 4px;
+  font-size: 10px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #0868ae;
+  padding: 3px 50px;
+  border-radius: 20px 0 20px 0;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left div.book-new {
+    font-size: 12px;
+    padding: 6px 50px;
+    margin-bottom: -10px;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left h1.title-work {
+  margin-bottom: 8px;
+  font-size: 20px;
+  text-align: inherit;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left h1.title-work {
+    margin-bottom: -6px;
+    font-size: 28px;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left p.author {
+  margin-bottom: 15px;
+  font-size: 16px;
+  color: gray;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left p.author {
+    font-size: 18px;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left img {
+  margin: 0 auto 40px;
+  display: block;
+  background-color: gray;
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left h2 {
+  font-size: 20px;
+  text-align: inherit;
+  color: #0868ae;
+  margin-bottom: 6px;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left h2 {
+    font-size: 30px;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left p.extract-work {
+  font-size: 14px;
+  margin-bottom: 16px;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left p.extract-work {
+    font-size: 18px;
+    margin-bottom: 26px;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left h3 {
+  font-size: 20px;
+  color: #0868ae;
+  margin-bottom: 6px;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left h3 {
+    font-size: 30px;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  font-size: 16px;
+  color: gray;
+  margin-bottom: 6px;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li {
+    width: 80%;
+    font-size: 18px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li span.bdd-var {
+  font-size: 16px;
+  color: #0868ae;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li span.bdd-var {
+    font-size: 18px;
+  }
+}
+section#section-detail-book div#container-detail-book #item-detail-book-right {
+  width: 100%;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book #item-detail-book-right {
+    width: 30%;
+  }
+}
+section#section-detail-book div#container-detail-book #item-detail-book-right h4.title-work-description {
+  font-size: 20px;
+  text-align: inherit;
+  color: #0868ae;
+  border: 1px solid #0868ae;
+  border-radius: 5px;
+  margin-bottom: 4px;
+}
+section#section-detail-book div#container-detail-book #item-detail-book-right ul.info-work-description li {
+  font-size: 16px;
+  color: gray;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book #item-detail-book-right ul.info-work-description li {
+    font-size: 18px;
+  }
+}
+section#section-detail-book div#container-detail-book #item-detail-book-right ul.info-work-description li span {
+  font-size: 16px;
+  color: #0868ae;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book #item-detail-book-right ul.info-work-description li span {
+    font-size: 18px;
+  }
+}
+section#section-detail-book div#container-detail-book #item-detail-book-right hr {
+  margin: 16px 0 20px;
+  border: 1px solid gray;
+}
+section#section-detail-book div#container-detail-book #item-detail-book-right ul.list-info-revervation li {
+  font-size: 16px;
+  color: #b53928;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book #item-detail-book-right ul.list-info-revervation li {
+    font-size: 18px;
+  }
+}
+section#section-detail-book div#container-detail-book #item-detail-book-right ul.list-info-revervation li:last-child {
+  color: gray;
+}
+section#section-detail-book div#container-detail-book div#item-detail-book-right h4.title-work-description {
+  font-size: 20px;
+  color: #0868ae;
+  margin-top: 16px;
+  margin-bottom: 6px;
+}
+section#section-detail-book div#container-detail-book div#item-detail-book-right ul.info-work-description li {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-bottom: 6px;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div#item-detail-book-right ul.info-work-description li {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+section#section-detail-book div#container-detail-book div#item-detail-book-right ul.list-info-revervation li {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-bottom: 6px;
+}
+section#section-detail-book div#container-detail-book div#item-detail-book-right a#btn-reservation {
+  display: block;
+  padding: 12px;
+  background-color: #ff5e38;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+  margin-top: 20px;
 }/*# sourceMappingURL=style-book-detail.css.map */
