--- a/css/style-catalogue.css
+++ b/css/style-catalogue.css
@@ -39,7 +39,8 @@ main #section-catalog h1 {
 }
 main #section-catalog #container-catalog #container-filter {
   position: sticky;
-  top: 120px;
+  top: 80px;
+  bottom: 140px;
   width: 100%;
   height: -moz-fit-content;
   height: fit-content;
@@ -78,6 +79,7 @@ main #section-catalog #container-catalog #container-filter .item-filter span.tog
 }
 main #section-catalog #container-catalog #container-filter .item-filter ul.list-filter {
   margin-left: 40px;
+  margin-bottom: 10px;
 }
 main #section-catalog #container-catalog #container-filter .item-filter ul.list-filter:last-child {
   margin-bottom: 10px;
