--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -49,7 +49,8 @@ main {
       #container-filter {
         position: -webkit-sticky;
         position: sticky;
-        top: 120px;
+        top: 80px;
+        bottom: 140px;
         width: 100%;
         height: fit-content;
         background-color: $white;
@@ -92,6 +93,7 @@ main {
 
           ul.list-filter {
             margin-left: 40px;
+            margin-bottom: 10px;
 
             &:last-child {
               margin-bottom: 10px;
